--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rleroi/trengo-webhook-example-node"
+    "url": "https://trengokw.herokuapp.com/"
   },
   "keywords": [
     "node",
